tests/compile-fail/integration__integration__anm_consts__meta_non_const.snap
---
source: tests/integration/anm_consts.rs
expression: stderr
---
error: unknown variable 'I0'
   ┌─ <input>:29:26
   │
29 │     memory_priority: 3 * I0,
   │                          ^^ not found in this scope
   │
   = there is a 'I0' defined in ANM, which is not a const expression


